# battery_predict

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/raw/batterylife/: convert.py  inspect.ipynb  readme.md
data/raw/batterylife/heldout/: _readme.md
data/raw/batterylife/set/: _readme.md
data/raw/sk/set/: _readme.md
data/set/: _inspect.ipynb  _readme.md
data/set/heldout/: _readme.md
docs/: data.md  inference.md  model.md  training.md
notebooks/dataset/: batterylife.ipynb  set.ipynb
src/battery_predict/: __init__.py
src/battery_predict/data/: __init__.py  dataset.py
src/battery_predict/inference/: __init__.py  server.py
src/battery_predict/inference/static/: index.html  styles.css
src/battery_predict/models/: __init__.py  agf.py  attention.py  decoder.py  embeddings.py  encoder.py  layers.py  network.py  pooling.py  predictor.py
src/battery_predict/training/: __init__.py  callbacks.py  cli.py  config.py  losses.py  module.py  orchestration.py  run.py
src/battery_predict/utils/: capacity.py  dataset.py  seed.py  splits.py
tests/: test_capacity.py  test_dataset.py  test_masking.py  test_model.py  test_splits.py
