[project]
name = "battery-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
]
