[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "battery-predict"
version = "0.1.0"
description = "Battery discharge latent modeling and next-cycle capacity prediction"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "clearml>=1.16.5",
    "fastapi>=0.115.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.5.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.2.0",
    "python-multipart>=0.0.9",
    "plotly>=6.6.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
    "einops>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]

[project.scripts]
train = "battery_predict.training.cli:main"
serve = "battery_predict.inference.server:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/battery_predict"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
